Fix some spacing and color.

--- a/Server/wwwroot/css/site.css
+++ b/Server/wwwroot/css/site.css
@@ -80,3 +80,7 @@ input[disabled], input[readonly], select[disabled] {
 .pointer {
     cursor: pointer;
 }
+
+#components-reconnect-modal {
+    color: black;
+}
